--- a/styles/styles.css
+++ b/styles/styles.css
@@ -338,3 +338,37 @@ main .section.highlight {
     }
   }
 }
+
+/* placeholder */
+.placeholder {
+  pointer-events: none;
+  cursor: default;
+  user-select: none;
+
+  *:not(:has(*)) {
+    /* important is okay as we want to override everything */
+    color: transparent !important;
+    background-color: #ccc !important;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transform: translateX(-100px);
+      background: linear-gradient(90deg, transparent, rgb(255 255 255 / 20%), transparent);
+      animation: loading 0.8s infinite;
+    }
+  }
+}
+
+@keyframes loading {
+  100% {
+    transform: translateX(100%);
+  }
+}
